<resources>
    <string name="app_name">Quiz App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="imageview">ImageView</string>
    <string name="uh_oh">Uh Oh...</string>
    <string name="over_message">You lost the quiz.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="congratulations">Congratulations!</string>
    <string name="won_message">You won the quiz.</string>
    <string name="continue_">CONTINUE</string>
    <string name="start">START</string>
    <string name="submit">SUBMIT</string>
    <string name="title_quizzare">Quizzare (%1$d/%2$d)</string>
    <string name="tv_about">About Quizarre</string>
    <string name="tv_about_message">Quizzare is a general knowledge quiz app. The name came from the words “quiz” and “bizarre”. Pretty cheesy, right? But it is what it is… So, enjoy the game!</string>
</resources>