<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_over"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OverFragment">

    <ImageView
        android:id="@+id/iv_over"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/lost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue" />

    <TextView
        android:id="@+id/tv_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/uh_oh"
        android:textColor="@color/main"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_over"
        app:layout_constraintStart_toStartOf="@+id/iv_over"
        app:layout_constraintTop_toBottomOf="@+id/iv_over" />

    <TextView
        android:id="@+id/tv_over_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/over_message"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_over"
        app:layout_constraintStart_toStartOf="@+id/tv_over"
        app:layout_constraintTop_toBottomOf="@+id/tv_over" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape_round"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/try_again"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_over_message"
        app:layout_constraintStart_toStartOf="@+id/tv_over_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_over_message" />
</androidx.constraintlayout.widget.ConstraintLayout>